==> freshev/micropython/ports/air780/machine_hw_spi.c <==
#include <stdio.h>
#include <stdint.h>
#include <string.h>
#include "py/runtime.h"
#include "py/stream.h"
#include "py/mphal.h"
#include "extmod/modmachine.h"
#include "common_api.h"
#include "luat_gpio.h"
#include "luat_spi.h"
#include "luat_debug.h"
#define MICROPY_HW_SPI0_SCLK 11
#define MICROPY_HW_SPI0_MOSI 9
#define MICROPY_HW_SPI0_MISO 10
#define MICROPY_HW_SPI0_CS_0 8
#define MICROPY_HW_SPI0_CS_1 3
#define MICROPY_HW_SPI1_SCLK 15
#define MICROPY_HW_SPI1_MOSI 13
#define MICROPY_HW_SPI1_MISO 14
#define MICROPY_HW_SPI1_CS_0 12
#define MICROPY_HW_SPI1_CS_1 16

static void machine_hw_spi_deinit_internal(machine_hw_spi_obj_t *self) {
    if(luat_spi_close(self->id) != 0) {
       mp_raise_msg(&mp_type_OSError, MP_ERROR_TEXT("invalid configuration"));
    }
    // SPI0_SSn1 and SPI1_SSn1 currently not supported by luatos SDK
    // dead code
    if(self->cs == 1) {
        if(self->id == 0) GPIO_IomuxEC618(GPIO_ToPadEC618(HAL_GPIO_3, 0), 0, 0, 0);
        if(self->id == 1) GPIO_IomuxEC618(GPIO_ToPadEC618(HAL_GPIO_16, 0), 0, 0, 0);
    }
    // end of dead code
}

static void machine_hw_spi_init_internal(machine_hw_spi_obj_t *self, mp_arg_val_t args[]) {

    // if we're not initialized, then we're
    // implicitly 'changed', since this is the init routine
    bool changed = self->state != MACHINE_HW_SPI_STATE_INIT;

    machine_hw_spi_obj_t old_self = *self;

    if (args[ARG_cs].u_int != -1 && args[ARG_cs].u_int != self->cs) {
        self->cs = args[ARG_cs].u_int;
        changed = true;
    }
    if(self->cs != 0) mp_raise_ValueError(MP_ERROR_TEXT("CS value not supported"));

    if (args[ARG_baudrate].u_int != -1) {
        uint32_t baudrate = args[ARG_baudrate].u_int;
        if(baudrate < 100000) {
            mp_raise_ValueError(MP_ERROR_TEXT("SPI baudrate should be more than 100000"));
        }
        if(baudrate > 25600000) {
            mp_raise_ValueError(MP_ERROR_TEXT("SPI baudrate should be less than 25600000"));
        }
        if (baudrate != self->baudrate) {
            self->baudrate = baudrate;
            changed = true;
        }
    }

    if (args[ARG_polarity].u_int != -1 && args[ARG_polarity].u_int != self->polarity) {
        self->polarity = args[ARG_polarity].u_int;
        changed = true;
    }

    if (args[ARG_phase].u_int != -1 && args[ARG_phase].u_int != self->phase) {
        self->phase = args[ARG_phase].u_int;
        changed = true;
    }

    if (args[ARG_bits].u_int != -1 && args[ARG_bits].u_int <= 0) {
        mp_raise_ValueError(MP_ERROR_TEXT("invalid bits"));
    }

    if (args[ARG_bits].u_int != -1 && args[ARG_bits].u_int != self->bits) {
        self->bits = args[ARG_bits].u_int;
        changed = true;
    }

    if (args[ARG_firstbit].u_int != -1 && args[ARG_firstbit].u_int != self->firstbit) {
        self->firstbit = args[ARG_firstbit].u_int;
        changed = true;
    }
    if (args[ARG_sck].u_int != -2 && args[ARG_sck].u_int != self->sck) {
        self->sck = args[ARG_sck].u_int;
        changed = true;
    }

    if (args[ARG_mosi].u_int != -2 && args[ARG_mosi].u_int != self->mosi) {
        self->mosi = args[ARG_mosi].u_int;
        changed = true;
    }

    if (args[ARG_miso].u_int != -2 && args[ARG_miso].u_int != self->miso) {
        self->miso = args[ARG_miso].u_int;
        changed = true;
    }

    if (changed) {
        if (self->state == MACHINE_HW_SPI_STATE_INIT) {
            self->state = MACHINE_HW_SPI_STATE_DEINIT;
            machine_hw_spi_deinit_internal(&old_self);
        }
    } else {
        return; // no changes
    }

    // SPI0_SSn1 and SPI1_SSn1 currently not supported by luatos SDK
    // dead code
    if(self->cs == 1) {
        if(self->id == 0) GPIO_IomuxEC618(GPIO_ToPadEC618(HAL_GPIO_3, 0), 4, 1, 0);
        if(self->id == 1) GPIO_IomuxEC618(GPIO_ToPadEC618(HAL_GPIO_16, 0), 4, 1, 0);
    }
    // end of dead code

    // LUAT_DEBUG_PRINT("SPI id=%d, cs=%d, CPHA=%d, CPOL=%d, dataw=%d, baudrate=%d, sck=%d, mosi=%d, miso=%d", self->id, self->cs, self->phase, self->polarity, self->bits, self->baudrate, self->sck, self->mosi, self->miso);
    luat_spi_t spi_conf = {
        .id = self->id,
        .CPHA = self->phase,
        .CPOL = self->polarity,
        .dataw = self->bits,
        .bit_dict = self->firstbit == MICROPY_PY_MACHINE_SPI_MSB ? 1 : 0,
        .master = 1,
        .mode = 1,             // mode is set to 1, full duplex 
        .bandrate = self->baudrate,
        .cs = self->id == 0 ? (self->cs == 0 ? MICROPY_HW_SPI0_CS_0 : MICROPY_HW_SPI0_CS_1) : (self->cs == 0 ? MICROPY_HW_SPI1_CS_0 : MICROPY_HW_SPI1_CS_1)
    };

    if(luat_spi_setup(&spi_conf) != 0) {
        mp_raise_msg(&mp_type_OSError, MP_ERROR_TEXT("invalid configuration"));
    }

    self->state = MACHINE_HW_SPI_STATE_INIT;
}

static void machine_hw_spi_transfer(mp_obj_base_t *self_in, size_t len, const uint8_t *src, uint8_t *dest) {
    machine_hw_spi_obj_t *self = MP_OBJ_TO_PTR(self_in);

    if (self->state == MACHINE_HW_SPI_STATE_DEINIT) {
        mp_raise_msg(&mp_type_OSError, MP_ERROR_TEXT("transfer on deinitialized SPI"));
        return;
    }

    // Round to nearest whole set of bits
    int bits_to_send = len * 8 / self->bits * self->bits;

    if (!bits_to_send) {
        mp_raise_ValueError(MP_ERROR_TEXT("buffer too short"));
    }

    int res;
    res = luat_spi_transfer(self->id, (const char*)src, len, (const char*)dest, len);

    if(res != len) {
        mp_warning(MP_WARN_CAT(RuntimeWarning), "SPI%d received %d/%d bytes", self->id, res, len);
    }
}

static void machine_hw_spi_init(mp_obj_base_t *self_in, size_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    machine_hw_spi_obj_t *self = (machine_hw_spi_obj_t *)self_in;

    mp_arg_val_t args[MP_ARRAY_SIZE(spi_allowed_args)];
    // offset arg lists by 1 to skip first arg, id, which is not valid for init()
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(spi_allowed_args) - 1,
        spi_allowed_args + 1, args + 1);

    machine_hw_spi_argcheck(args, &machine_hw_spi_default_pins[self->id]);
    machine_hw_spi_init_internal(self, args);
}

mp_obj_t machine_hw_spi_make_new(const mp_obj_type_t *type, size_t n_args, size_t n_kw, const mp_obj_t *all_args) {
    // MP_MACHINE_SPI_CHECK_FOR_LEGACY_SOFTSPI_CONSTRUCTION(n_args, n_kw, all_args);

    mp_arg_val_t args[MP_ARRAY_SIZE(spi_allowed_args)];
    mp_arg_parse_all_kw_array(n_args, n_kw, all_args, MP_ARRAY_SIZE(spi_allowed_args), spi_allowed_args, args);

    const mp_int_t spi_id = args[ARG_id].u_int;
    if (spi_id >= 0 && spi_id < SPI_MAX) {
        machine_hw_spi_argcheck(args, &machine_hw_spi_default_pins[spi_id]);
        #if !defined(RTE_SPI0)
        if(spi_id == 0) mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("SPI(%d) doesn't exist (not configured)"), spi_id);
        #endif
        #if !defined(RTE_SPI1)
        if(spi_id == 1) mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("SPI(%d) doesn't exist (not configured)"), spi_id);
        #endif
    } else {
        mp_raise_msg_varg(&mp_type_ValueError, MP_ERROR_TEXT("SPI(%d) doesn't exist (SoC unsupported)"), spi_id);
    }
    // Replace -1 non-pin args with default values
    //                                   baudrate, polarity, phase, bits, firstbit  
    static const mp_int_t defaults[] = { 10000000, 0,        0,     8,    MICROPY_PY_MACHINE_SPI_MSB };
    for (int i = ARG_baudrate; i <= ARG_firstbit; i++) {
        if (args[i].u_int == -1) {
            args[i].u_int = defaults[i - ARG_baudrate];
        }
    }

    machine_hw_spi_obj_t *self = &machine_hw_spi_obj[spi_id];
    self->id = spi_id;

    self->base.type = &machine_spi_type;

    machine_hw_spi_init_internal(self, args);

    return MP_OBJ_FROM_PTR(self);
}
